Add undo/redo and clear actions

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
 <canvas id="board" width="5000" height="5000"></canvas>
+<div id="actions">
+  <button id="clear" title="Borrar todo">🗑</button>
+  <button id="redo" title="Recuperar">↻</button>
+  <button id="undo" title="Deshacer">↺</button>
+</div>
 <div id="toolbar">
   <button id="tool-draw" title="Pincel"><img src="icons/pencil.svg" alt="Pincel"></button>
   <button id="tool-rect" title="Rect\u00e1ngulo"><img src="icons/rect.svg" alt="Rect\u00e1ngulo"></button>
