Update toolbar to floating style

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <button id="undo" title="Deshacer">↺</button>
 </div>
 <div id="toolbar">
-  <button id="tool-draw" title="Pincel"><img src="icons/pencil.svg" alt="Pincel"></button>
-  <button id="tool-rect" title="Rect\u00e1ngulo"><img src="icons/rect.svg" alt="Rect\u00e1ngulo"></button>
-  <button id="tool-line" title="L\u00ednea"><img src="icons/line.svg" alt="L\u00ednea"></button>
+  <button id="tool-draw" title="Pincel">🖌️</button>
+  <button id="tool-rect" title="Rect\u00e1ngulo">◻️</button>
+  <button id="tool-line" title="L\u00ednea">➖</button>
 </div>
 <script src="script.js"></script>
 <script>
