feat: add text tool and improved pan

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <button id="tool-draw" title="Pincel">🖌️</button>
   <button id="tool-rect" title="Rect\u00e1ngulo">◻️</button>
   <button id="tool-line" title="L\u00ednea">➖</button>
+  <button id="tool-text" title="Texto">🅣</button>
   <button id="tool-select" title="Seleccionar">🖱️</button>
 </div>
 <script src="script.js"></script>
