--- a/index.html
+++ b/index.html
@@ -17,7 +17,18 @@
   <button id="tool-draw" title="Pincel">🖌️</button>
   <button id="tool-rect" title="Rect\u00e1ngulo">◻️</button>
   <button id="tool-line" title="L\u00ednea">➖</button>
+  <button id="tool-text" title="Texto">🅣</button>
   <button id="tool-select" title="Seleccionar">🖱️</button>
+</div>
+<div id="text-colors" class="color-menu">
+  <button data-color="#000000" style="background:#000"></button>
+  <button data-color="#ff0000" style="background:#ff0000"></button>
+  <button data-color="#00ff00" style="background:#00ff00"></button>
+  <button data-color="#0000ff" style="background:#0000ff"></button>
+  <button data-color="#ffff00" style="background:#ffff00"></button>
+  <button data-color="#ff00ff" style="background:#ff00ff"></button>
+  <button data-color="#00ffff" style="background:#00ffff"></button>
+  <button data-color="#ffa500" style="background:#ffa500"></button>
 </div>
 <script src="script.js"></script>
 <script>
