--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Whiteboard V3</title>
+<title>Whiteboard V4</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div id="save-menu">
+  <select id="drawing-list"></select>
+  <input id="drawing-title" type="text" placeholder="Título">
+  <button id="save-drawing" title="Guardar">💾</button>
+</div>
 <canvas id="board" width="5000" height="5000"></canvas>
 <div id="actions">
   <button id="clear" title="Borrar todo">🗑</button>
